fix overflow of signup button

--- a/app/styles/signup.scss
+++ b/app/styles/signup.scss
@@ -45,6 +45,7 @@ form {
 
 .signup-box {
 	padding: 25px;
+	overflow: auto;
 }
 
 .clearfix {
